corrected the input styling on iPhones

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
     font-family: "Nunito", sans-serif;
 }
 
-body, html {
+body {
     background-image:  linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/Background-1.jpg');
-    height: 100vh;
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -221,9 +221,8 @@ button svg {
 }
 
 @media only screen and (max-width: 450px) {
-    body, html {
+    body {
         background-image: url('images/background-2.jpg');
-        height: 115%;
     }
 
     .fullLocation {
